--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@splinetool/react-spline": "^4.1.0",
     "@splinetool/runtime": "^1.12.21",
     "framer-motion": "^12.23.24",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "nodemailer": "^7.0.10",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "sonner": "^2.0.7",
     "swiper": "^12.0.3"
   },
